dark mode fixed

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ All colors MUST be HSL.
     --destructive-foreground: 210 40% 98%;
 
     --border: 0 0% 91.4%;
+    --border-muted: 0 0% 91.4%;
     --input: 0 0% 91.4%;
     --ring: 20 6% 16%;
 
@@ -152,6 +153,7 @@ All colors MUST be HSL.
     --destructive-foreground: 210 40% 98%;
 
     --border: 0 0% 17.5%;
+    --border-muted: 0 0% 15%;
     --input: 0 0% 17.5%;
     --ring: 0 0% 83.9%;
     --sidebar-background: 0 0% 10%;
